WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66108
[Qt][REGRESSION] composited content doesn't render since
r92651
https://bugs.webkit.org/show_bug.cgi?id=66108
Summary
[Qt][REGRESSION] composited content doesn't render since r92651
Noam Rosenthal
Reported
2011-08-11 15:42:46 PDT
This is due to change in the signature of GraphicsLayer::syncCompositingState.
Attachments
Patch
(3.56 KB, patch)
2011-08-11 15:46 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2011-08-11 15:46:19 PDT
Created
attachment 103690
[details]
Patch
WebKit Review Bot
Comment 2
2011-08-12 10:36:32 PDT
Comment on
attachment 103690
[details]
Patch Clearing flags on attachment: 103690 Committed
r92973
: <
http://trac.webkit.org/changeset/92973
>
WebKit Review Bot
Comment 3
2011-08-12 10:36:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug