[Qt][REGRESSION] composited content doesn't render since r92651 https://bugs.webkit.org/show_bug.cgi?id=66108

Reviewed by Benjamin Poulain.

Changed the signature for GraphicsLayerTextureMapper::syncCompositingState to match
the new signature in GraphicsLayer.h.

No new tests. This is a regression that's covered by existing pixel tests.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::syncCompositingState):
* platform/graphics/texmap/GraphicsLayerTextureMapper.h:


Canonical link: https://commits.webkit.org/81999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92973 268f45cc-cd09-0410-ab3c-d52691b4dbfc